--- a/app/src/main/res/layout/rv_element.xml
+++ b/app/src/main/res/layout/rv_element.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+
+              android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/tv_stock_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/linear_border"
+        android:gravity="center"/>
 
     <LinearLayout
         android:id="@+id/ll_text"
@@ -10,39 +18,96 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_bid"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+        <include layout="@layout/divider"/>
 
-        <TextView
-            android:id="@+id/tv_ask"
+        <RelativeLayout
+            android:id="@+id/rl_bid"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/tv_bid_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:text="@string/bid"/>
+
+            <TextView
+                android:id="@+id/tv_bid"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_bid_label"
+                android:gravity="center"/>
+
+        </RelativeLayout>
+
+        <include layout="@layout/divider"/>
+
+        <RelativeLayout
+            android:id="@+id/rl_ask"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/tv_ask_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:text="@string/ask"/>
+
+            <TextView
+                android:id="@+id/tv_ask"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_ask_label"
+                android:gravity="center"/>
+
+        </RelativeLayout>
+
+        <include layout="@layout/divider"/>
 
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/ll_buttons"
+        style="?android:attr/buttonBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/btn_buy"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/buy" />
+        <include layout="@layout/divider"/>
 
         <Button
             android:id="@+id/btn_sell"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/horizontal_button_margin"
+            android:layout_marginRight="@dimen/horizontal_button_margin"
             android:layout_weight="1"
-            android:text="@string/sell" />
+            android:background="@android:color/black"
+            android:text="@string/sell"
+            android:textColor="@android:color/white"/>
+
+        <include layout="@layout/divider"/>
+
+        <Button
+            android:id="@+id/btn_buy"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/horizontal_button_margin"
+            android:layout_marginRight="@dimen/horizontal_button_margin"
+            android:layout_weight="1"
+            android:background="@android:color/black"
+            android:text="@string/buy"
+            android:textColor="@android:color/white"/>
+
+        <include layout="@layout/divider"/>
 
     </LinearLayout>
 
