--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="horizontal_button_margin">1dp</dimen>
+    <dimen name="border_width">1dp</dimen>
+    <dimen name="divider_width">1dp</dimen>
+    <dimen name="horizontal_textview_margin">10dp</dimen>
+    <dimen name="horizontal_padding">5dp</dimen>
 </resources>
